# simple-fedimint-wallet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: main.rs  wallet.rs
