[package]
name = "simple-fedimint-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
  # Core Fedimint dependencies
  fedimint-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.7.0" }
  fedimint-core = { git = "https://github.com/fedimint/fedimint", tag = "v0.7.0" }
  fedimint-ln-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.7.0" }
  fedimint-ln-common = { git = "https://github.com/fedimint/fedimint", tag = "v0.7.0" }
  fedimint-mint-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.7.0" }
  fedimint-wallet-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.7.0" }
  fedimint-rocksdb = { git = "https://github.com/fedimint/fedimint", tag = "v0.7.0" }
  fedimint-api-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.7.0" }

  # Async runtime and utilities
  tokio = { version = "1", features = ["full"] }
  futures = "0.3"

  # Error handling and serialization
  anyhow = "1.0"
  thiserror = "2.0"
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"

  # CLI interface
  clap = { version = "4.5", features = ["derive", "env"] }

  # Logging
  tracing = "0.1"
  tracing-subscriber = { version = "0.3", features = ["env-filter"] }

  # Database
  # rocksdb = "0.16"

  # Networking
  # reqwest = { version = "0.12", features = ["json"] }
  # serde_urlencoded = "0.7"

  # Configuration
  # config = "0.14"